--- a/config/locales/geoblacklight.en.yml
+++ b/config/locales/geoblacklight.en.yml
@@ -103,7 +103,7 @@ en:
       tiled_map_layer: 'ArcGIS Tiled Map Layer'
       dynamic_map_layer: 'ArcGIS Dynamic Map Layer'
       image_map_layer: 'ArcGIS Image Map Layer'
-      data_dictionary: 'Download ISO 19139'
+      data_dictionary: 'Download ISO 19139 XML'
       services: 'Web services'
       services_close: 'Close'
       map_service: 'OpenStreetMap_France'
