Updating dc_format_s and layer_geom_s to *_sm

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,10 +58,10 @@ en:
         dc_creator_sm: 'Author(s)'
         dc_publisher_sm: 'Institution(s)'
         dct_issued_s: 'Year(s)'
-        layer_geom_type_s: 'Data Type'
+        layer_geom_type_sm: 'Data Type'
         dc_rights_s: 'Access'
         dc_subject_sm: 'Subject(s)'
-        dc_format_s: 'Format'
+        dc_format_sm: 'Format'
         dct_isPartOf_sm: 'Collection'
         dc_description_s: 'Description'
         dct_spatial_sm: 'Place'
