--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -37,10 +37,10 @@ fr:
         dc_creator_sm: 'Auteur(s) '
         dc_publisher_sm: 'Institution(s) '
         dct_issued_s: 'An(s)'
-        layer_geom_type_s: 'Type de données'
+        layer_geom_type_sm: 'Type de données'
         dc_rights_s: 'Accès'
         dc_subject_sm: 'Sujet(s) '
-        dc_format_s: 'Format'
+        dc_format_sm: 'Format'
         dct_isPartOf_sm: 'Collecte '
         dc_description_s: 'Description '
         dct_spatial_sm: 'Lieu '
