RDM-5327 Change Get Citation to View Citation for button on record page

--- a/config/locales/geoblacklight.en.yml
+++ b/config/locales/geoblacklight.en.yml
@@ -119,7 +119,7 @@ en:
       value: 'Value'
       citation:
         apa:
-          button: 'Get citation'
+          button: 'View Citation'
           modal:
             copy: 'Copy Citation'
             close: "Close"
