--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -58,7 +58,7 @@ en:
         dc_creator_sm: 'Authors'
         dc_publisher_sm: 'Institution(s)'
         dct_issued_s: 'Date published'
-        layer_geom_type_s: 'Data Type'
+        layer_geom_type_sm: 'Data Type'
         dc_rights_s: 'Access'
         dc_subject_sm: 'Keywords'
         dc_format_s: 'Format'
