--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,10 +72,13 @@ en:
 
         dc_title_s: 'title'
         sort:
-          score desc, dc_title_sort asc: 'relevance'
+          score desc, dc_title_sort asc: 'Relevance'
           solr_year_i desc, dc_title_sort asc: 'year'
           dc_publisher_s asc, dc_title_sort asc: 'publisher'
-          dc_title_sort asc: title
+          dct_issued_s desc, dc_title_sort asc: 'Date Published (newest first)'
+          dct_issued_s asc, dc_title_sort asc: 'Date Published (oldest first)'
+          dc_title_sort asc: 'Title (a-z)'
+          dc_title_sort desc: 'Title (z-a)'
 
   map:
     move_map_search: 'Search when I move the map'
