--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,6 +79,7 @@ en:
           dct_issued_s asc, dc_title_sort asc: 'Date Published (oldest first)'
           dc_title_sort asc: 'Title (a-z)'
           dc_title_sort desc: 'Title (z-a)'
+      logo: 'Logo'
 
   map:
     move_map_search: 'Search when I move the map'
