--- a/config/locales/geoblacklight.en.yml
+++ b/config/locales/geoblacklight.en.yml
@@ -45,17 +45,14 @@ en:
       click: 'Click'
       results: 'to see the results'
       frdr: 'https://www.frdr-dfdr.ca'
-      cc: 'https://www.computecanada.ca'
-      portage: 'https://portagenetwork.ca/'
-      carl: 'https://www.carl-abrc.ca/'
-      ndrio: 'https://engagedri.ca/'
+      alliance:
+        logo: 'alliance_logo.svg'
+        name: 'Digital Research Alliance of Canada'
+        url: 'https://alliancecan.ca/'
       important: 'FRDR provides map search functionality to supplement the text-based FRDR discovery service. The map search includes datasets from repositories indexed by FRDR with bounding box metadata, location metadata, and/or geospatial files. To perform a text only search, return to '
       important_num : '(2)'
       colon: ': '
-      can_lib: 'Canadian Association of Research Libraries & Compute Canada'
-      ndrio_lib: 'New Digital Rearch Infrastucture Organization & Compute Canada'
-      cc_carl_priv: 'Compute Canada and CARL respect the privacy of individuals and will only collect, use, and disclose Personal Information in keeping with information access and privacy law.'
-      cc_ndrio_priv: 'Compute Canada and NDRIO respect the privacy of individuals and will only collect, use, and disclose Personal Information in keeping with information access and privacy law.'
+      disclaimer: 'Digital Research Alliance of Canada respects the privacy of individuals and will only collect, use, and disclose Personal Information in keeping with information access and privacy law.'
       priv: 'Privacy Policy'
       priv_uri: 'https://www.frdr-dfdr.ca/docs/en/privacy_policy/'
       map_attrib: 'Esri, DeLorme, NAVTEQ, TomTom, Intermap, iPC, USGS, FAO, NPS, NRCAN, GeoBase, Kadaster NL, Ordnance Survey, Esri Japan, METI, Esri China (Hong Kong), and the GIS User Community'
