--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -77,7 +77,7 @@ en:
       save: 'save'
 
     tools:
-      title: 'Download FRDR Metadata'
+      title: 'Tools'
       citation: 'Cite'
       email: 'Email'
       sms: 'SMS This'
