RDM-5671 Add individual scrolling for filter facets

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -183,7 +183,9 @@ en:
           limit_search: 'limit your search'
         counter: '%{counter}. '
       facets:
-        title: 'Limit your search'
+        details: "Search Details"
+        title: 'Limit by ...'
+        clear_all: 'Clear all'
         clear: 'Clear Filter'
         sort:
           count: 'Numerical Sort'
