Secondary colour changed to Alliance style and Access this Dataset btn

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -184,7 +184,7 @@ en:
         counter: '%{counter}. '
       facets:
         details: "Search Details"
-        title: 'Limit by ...'
+        title: 'Limit by:'
         clear_all: 'Clear all'
         clear: 'Clear Filter'
         sort:
