--- a/config/locales/geoblacklight.en.yml
+++ b/config/locales/geoblacklight.en.yml
@@ -69,11 +69,11 @@ en:
       subject: 'Subject'
 
     tools:
+      access: 'Access this dataset'
       login_to_view: 'Login to View and Download'
       open_carto: 'Open in Carto'
       open_arcgis: 'Open in ArcGIS Online'
       access_data: 'Access the data'
-      explore: 'Explore at '
 
     formats:
       arcgrid: 'ArcGRID'
