--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -183,7 +183,13 @@ en:
           limit_search: 'limit your search'
         counter: '%{counter}. '
       facets:
-        details: "Search Details"
+        details:
+          title: 'Search Details'
+          none: 'No search details.'
+          dc_creator_sm: 'author'
+          dc_rights_s: 'access'
+          dct_issued_ds: 'date'
+          dct_provenance_s: 'source'
         title: 'Limit by:'
         clear_all: 'Clear all'
         clear: 'Clear Filter'
