--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -226,6 +226,7 @@ en:
         title: "No results found for your search"
         modify_search: "Try modifying your search"
         use_fewer_keywords: "Use fewer keywords to start, then refine your search using the links on the left."
+        zoom_out_map: "Zoom out the map to find other results"
         search_fields: "you searched by %{search_fields}"
         search_everything: "try searching everything"
       view_title: "View results as: "
