--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -194,7 +194,7 @@ en:
           none: 'No search details.'
           dc_creator_sm: 'author'
           dc_rights_s: 'access'
-          dct_issued_ds: 'date'
+          dct_issued_s: 'date'
           dct_provenance_s: 'source'
         title: 'Limit by:'
         clear_all: 'Clear all'
